tests/snapshots/tests__full_moon_test_suite@gt-lt.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
call(1 < 2)
call(1 <= 2)
call(2 > 1)
call(2 >= 1)
call(x >= y)

