tests/snapshots/tests__full_moon_test_suite@if-3.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
if x then
	foo()
elseif y then
	bar()
end

