tests/snapshots/tests__full_moon_test_suite@if-4.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
if x then
	foo()
elseif y then
	bar()
else
	baz()
end

