tests/snapshots/tests__full_moon_test_suite@local-assignment-3.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local a, b = 1, 2
local c, d = 3, 4
local e, f = 5, 6

