tests/snapshots/tests__full_moon_test_suite@local-assignment-5.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local x = 1
-- Then a comment
local y = 1

