tests/snapshots/tests__full_moon_test_suite@local-function-2.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local function foo(a, b) end
local function bar(...) end
local function baz(a, b, ...) end

