tests/snapshots/tests__full_moon_test_suite@mixed-indented-comments.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
-- Indented single line
--[[
		Indented multi line
	]]

