tests/snapshots/tests__full_moon_test_suite@multi-line-comments-1.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
--[[
	such comments
	much lines
	wow
]]

