tests/snapshots/tests__full_moon_test_suite@multi-line-comments-2.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
--[=[
	never have i used these weird equals signs comments
	but im sure someone does
]=]

