tests/snapshots/tests__full_moon_test_suite@multi-line-comments-4.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
--[=====[
	lua be like
]====]
	still going
]=====]

