tests/snapshots/tests__full_moon_test_suite@multi-line-comments-5.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
--[[
local emotes = {
	[":thinking:"] = "http://www.roblox.com/asset/?id=643340245",
	[":bug:"] = "http://www.roblox.com/asset/?id=860037275"
}
]]

