tests/snapshots/tests__full_moon_test_suite@multi-line-comments-6.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local function x(
	... --[[comment here]]
)
end

